# proofmarshal

./: Cargo.toml  LICENSE  README.md
hoard/: Cargo.toml  todo
hoard/src/: bag.rs  blob.rs  bytes.rs  coerce.rs  fatptr.rs  heap.rs  lib.rs  linkedlist.rs  marker.rs  maybevalid.rs  never.rs  offset.rs  own.rs  ownedptr.rs  primitive.rs  refs.rs  scalar.rs  validptr.rs  writebytes.rs
hoard/src/blob/: bytes.rs  cursor.rs  encoder.rs  layout.rs  mod.rs  mod2.rs  padding.rs  save.rs  validate.rs  validate2.rs  writeblob.rs
hoard/src/blob/impls/: array.rs  arrays.rs  mod.rs  never.rs  option.rs  scalars.rs  slices.rs  tuples.rs
hoard/src/blob/layout/: cowref.rs  mod.rs
hoard/src/coerce/: array.rs  mod.rs  scalars.rs  slice.rs
hoard/src/hoard/: disk.rs  mapping.rs  mod.rs  offset.rs  snapshot.rs
hoard/src/impls/: array.rs  mod.rs  never.rs  option.rs  scalar.rs  scalars.rs  slices.rs
hoard/src/journal/: mod.rs  wordoffset.rs
hoard/src/load/: blob.rs  mod.rs
hoard/src/load.bak/: error.rs  mod.rs
hoard/src/load.bak/impls/: arrays.rs  scalars.rs  tuples.rs
hoard/src/load/de/: mod.rs
hoard/src/load/en/: mod.rs
hoard/src/load/impls/: array.rs  arrays.rs  mod.rs  never.rs  option.rs  primitives.rs  scalars.rs  slice.rs
hoard/src/marshal/: blob.rs  mod.rs  pile.rs  primitive.rs  ptrvalidator.rs  save.rs  scalars.rs  tuples.rs
hoard/src/marshal/blob/: layout.rs  mod.rs  padding.rs  writeblob.rs
hoard/src/marshal/de/: mod.rs
hoard/src/marshal/decode/: mod.rs
hoard/src/marshal/en/: mod.rs
hoard/src/marshal/encode/: mod.rs
hoard/src/marshal/impls/: mod.rs  option.rs  scalar.rs  scalars.rs  slice.rs  tuples.rs
hoard/src/marshal/load/: mod.rs
hoard/src/marshal/pile/: mod.rs
hoard/src/offset/: mod.rs  offset.rs
hoard/src/owned/: mod.rs  own.rs  refown.rs  refs.rs  take.rs
hoard/src/persist/: blob.rs  mod.rs
hoard/src/persist/blob/: validate.rs  writeblob.rs
hoard/src/pile/: error.rs  layout.rs  mapping.rs  marshal_impls.rs  mod.rs  offset.rs  offsetmut.rs  snapshot.rs  tuples.rs
hoard/src/pointee/: emplace.rs  mod.rs  slice.rs
hoard/src/primitive/: impls.rs  mod.rs
hoard/src/ptr/: bag.rs  error.rs  fat.rs  fatptr.rs  heap.rs  mod.rs  never.rs  own.rs  ownedptr.rs  unit.rs  validptr.rs
hoard/src/ptr/key/: map.rs  mod.rs  offset.rs
hoard/src/save/: blob.rs  mod.rs  primitive.rs  writeblob.rs
hoard/src/save/impls/: array.rs  arrays.rs  mod.rs  never.rs  option.rs  scalars.rs  slice.rs  (+1 more)
hoard/src/validate/: maybevalid.rs  mod.rs
hoard/src/zone/: bag.rs  error.rs  fat.rs  fatptr.rs  heap.rs  missing.rs  mod.rs  never.rs  own.rs  ownedptr.rs  refs.rs  type.rs  validptr.rs
proofmarshal/: Cargo.toml
proofmarshal-collections/: Cargo.toml
proofmarshal-collections/src/: lib.rs  merklesum.rs  seal.rs
proofmarshal-collections/src/commit/: digest.rs  mod.rs
proofmarshal-collections/src/fact/: lazy.rs  maybe.rs  mod.rs
proofmarshal-collections/src/impls/: arrays.rs  scalars.rs
proofmarshal-collections/src/mmr/: length.rs  mod.rs
proofmarshal-collections/src/tree/: commit_impls.rs  drop_impls.rs  flags.rs  height.rs  marshal_impls.rs  mod.rs  pointee_impls.rs  std_impls.rs  tests.rs
proofmarshal-derive-tests/: Cargo.toml
proofmarshal-derive-tests/src/: lib.rs
proofmarshal/src/: chain.rs  commit.rs  digest.rs  fact.rs  lib.rs  maybe.rs  seal.rs  trust.rs  valid.rs  validate.rs
proofmarshal/src/arena/: heap.rs  missing.rs  mod.rs  primitive.rs
proofmarshal/src/bitcoin/: mod.rs  state.rs
proofmarshal/src/collections/: tree.rs
proofmarshal/src/commit/: digest.rs  mod.rs
proofmarshal/src/fact/: lazy.rs  mod.rs
proofmarshal/src/ptr/: heap.rs  missing.rs  mod.rs  never.rs  primitive.rs  refs.rs
proofmarshal/src/verbatim/: array.rs  mod.rs  option.rs
testpersist/: Cargo.toml
testpersist/src/: lib.rs
tests/: Cargo.toml
tests/src/: fact.rs  lib.rs
verbatim_derive/test/: Cargo.toml
verbatim_derive/test/src/: lib.rs
(+188 files in other folders)
