[package]
name = "hoard"
version = "0.1.0"
authors = ["Peter Todd <pete@petertodd.org>"]
edition = "2018"

[dependencies]
nonzero = { path = "../nonzero" }
owned = { path = "../owned" }
leint = { path = "../leint" }
singlelife = { path = "../singlelife" }
sliceinit = { path = "../sliceinit" }

memmap = "0.7.0"

[dev-dependencies]
tempfile = "3.1.0"
