[package]
name = "hoard"
version = "0.1.0"
authors = ["Peter Todd <pete@petertodd.org>"]
edition = "2018"

[dependencies]
nonzero = { path = "../nonzero" }
leint = { path = "../leint" }
singlelife = { path = "../singlelife" }
sliceinit = { path = "../sliceinit" }

owned = "0.1.0"
memmap = "0.7.0"

static_assertions = "1.1.0"
thiserror = "1.0.9"

[dev-dependencies]
tempfile = "3.1.0"
