[package]
name = "proofmarshal-collections"
version = "0.1.0"
authors = ["Peter Todd <pete@petertodd.org>"]
edition = "2018"

[dependencies]
hoard = { path = "../hoard" }
proofmarshal-core = { path = "../proofmarshal-core" }
proofmarshal-derive = { path = "../proofmarshal-derive" }

owned = "0.1.0"
thiserror = "1.0.9"
static_assertions = "1.1.0"
sha2 = "0.8.0"
hex-literal = "0.2.1"
bitflags = "1.2.1"
