[package]
name = "proofmarshal-derive-tests"
version = "0.1.0"
authors = ["Peter Todd <pete@petertodd.org>"]
edition = "2018"

[dependencies]
leint = { path = "../leint" }
proofmarshal-core = { path = "../proofmarshal-core" }
proofmarshal-derive = { path = "../proofmarshal-derive" }

[dev-dependencies]
