[package]
name = "testpersist"
version = "0.1.0"
authors = ["Peter Todd <pete@petertodd.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nonzero = { path = "../nonzero" }
persist = { path = "../persist" }
persist_derive = { path = "../persist_derive" }
