[package]
name = "tests"
version = "0.1.0"
authors = ["Peter Todd <pete@petertodd.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proofmarshal = { path = "../proofmarshal" }
proofmarshal_derive = { path = "../proofmarshal_derive" }
